<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CIMobi</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="register">register</string>
    <string name="IpaddrStr">服务器地址</string>
    <string name="UsernameStr">机器别名</string>
    <string name="LoginBtnStr">连接</string>
    <string name="ip">172.22.184.179</string>
    <string name="port">3204</string>
    <string name="alias">machine</string>
    <string name="user">jiangshuguang</string>
    <string name="server_info">日志信息</string>
    <string name="server_ip">服务器IP</string>
    <string name="server_send_content">服务器发送的内容</string>
    <string name="SendBtnStr">发送</string>
    <string name="CmdBtnStr">启动浏览器</string>
    <string name="conBtnStr">连接</string>

    <!-- set -->
    <string name="ip_lable">★服务器IP:</string>
    <string name="port_lable">★服务器端口:</string>
    <string name="alias_lable">★机器别名:</string>
    <string name="ip_value">172.22.184.179</string>
    <string name="port_value">3204</string>
    <string name="alias_value">jsg</string>
    <string name="save_button">◆保存</string>
    <string name="connect_button">√连接</string>
    <string name="disconnet_button">×断开</string>

    <!-- menu -->
    <string name="menu_log">日志</string>
    <string name="menu_set">主界面</string>
    <string name="menu_info">系统信息</string>

    <!-- sysinfo -->
    <string name="type_lab">★机器型号：</string>
    <string name="version_lab">★系统版本：</string>
    <string name="ip_lab">★本机 IP:</string>
    <string name="id_lab">★机器 ID：</string>
    <string name="browser_lab">★浏览器列表：</string>
    <string name="status_lab">★连接状态：</string>
    <string name="info_default_value">none</string>
    <string name="disConnect">断开连接</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main_test">MainActivity</string>

</resources>