<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_weight = "1"
    android:layout_margin = "10dip">
    
   <TextView
   		android:layout_width = "fill_parent"
   		android:layout_height = "wrap_content"
   		android:text = "@string/server_info"
   	/>
   
    
	<EditText
	 	android:id = "@+id/server_info"
	 	android:layout_width = "fill_parent"
	 	android:layout_height = "250dip"
	 	android:background = "#343434" 	
		android:paddingTop = "0px"
		android:layout_marginBottom="30dip"
		android:gravity = "top"
		android:textColor= "#ffffff"
		android:editable = "false"
		android:scrollHorizontally = "false"
		android:scrollbarAlwaysDrawVerticalTrack = "true"
		android:textSize = "15dip"
	 />
	
	<TextView
   		android:layout_width = "fill_parent"
   		android:layout_height = "wrap_content"
   		android:text = "@string/server_send_content"
   	 />
	
	 <EditText
		 android:id = "@+id/send_info"
		 android:layout_width = "fill_parent"
		 android:layout_height = "50dip"
		 android:layout_marginBottom="10dip"
		 android:background = "#343434"
		 android:textColor= "#ffffff"
		 android:textSize = "15dip"		 
	 />
	 
	 
	  <LinearLayout  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        android:gravity="right" >        
	      <Button
			android:id = "@+id/conBtn"
			android:layout_width = "100dip"
		 	android:layout_height = "wrap_content"
		 	android:text = "@string/conBtnStr"
			/> 
			
		  <Button
			android:id = "@+id/sendBtn"
			android:layout_width = "100dip"
		 	android:layout_height = "wrap_content"
		 	android:text = "@string/SendBtnStr"
			/> 
			
		  <Button
			android:id = "@+id/cmdBtn"
			android:layout_width = "100dip"
		 	android:layout_height = "wrap_content"
		 	android:text = "@string/CmdBtnStr"
			/> 
     </LinearLayout>
		
</LinearLayout>